tests/invalid/invalid_global_redef.c
int x = 10;
int x = 20; // FAIL: Redefinition

int main() {
    return 0;
}